--- a/frontend/web/src/components/Landing/MainContent/MainContent.css
+++ b/frontend/web/src/components/Landing/MainContent/MainContent.css
@@ -60,7 +60,7 @@ a {
 .circle-text {
     width: 18.5rem;
     font-size: 1.16rem;
-    font-weight: 600;
+    font-weight: 500;
     font-family: 'Nunito Sans', serif;
     color: #fafafa;
 }
